package com.bytestorm.insightflow.domain.entity;

import java.time.Duration;
import java.time.LocalDateTime;

public class Reuniao extends BaseEntity {
    private String transcricao;
    private Duration duracao;
    private LocalDateTime ocorreuEm;
    private Colaborador uploadedBy;

    public Reuniao(String transcricao, Duration duracao, LocalDateTime ocorreuEm, Colaborador uploadedBy) {
        super();

        this.transcricao = transcricao;
        this.duracao = duracao;
        this.ocorreuEm = ocorreuEm;
        this.uploadedBy = uploadedBy;
    }

    public String getTranscricao() {
        return transcricao;
    }

    public Duration getDuracao() {
        return duracao;
    }

    public LocalDateTime getOcorreuEm() {
        return ocorreuEm;
    }

    public Colaborador getUploadedBy() {
        return uploadedBy;
    }

    @Override
    public boolean equals(Object o) {
        if (this == o) return true;

        if (o == null || getClass() != o.getClass()) return false;
        
        Reuniao that = (Reuniao) o;

        return this.getTranscricao().equals(that.getTranscricao());
    }
}
