package com.bytestorm.insightflow.domain.enums;

public enum TipoColaborador {
    VENDEDOR,
    GERENTE_VENDAS;
}
