classDiagram
    direction TB

    class BaseEntity {
        <<abstract>>
        - UUID id
        - LocalDateTime criadoEm

        + BaseEntity()
        + getId() UUID
        + getCriadoEm() LocalDateTime
    }

    class Colaborador {
        <<abstract>>
        - String nome
        - String email
        - String senha
        - TipoColaborador tipo

        + Colaborador(String nome, String email, String senha, TipoColaborador tipo)
        + getNome() String
        + getEmail() String
        + getSenha() String
        + autenticar(String senha) boolean
        + getTipo() TipoColaborador
    }

    class Vendedor {
        + Vendedor(String nome, String email, String senha)
    }

    class GerenteVendas {
        + GerenteVendas(String nome, String email, String senha)
    }

    class Reuniao {
        - String transcricao
        - Duration duracao
        - LocalDateTime ocorreuEm
        - Colaborador uploadedBy

        + Reuniao(String transcricao, Duration duracao, LocalDateTime ocorreuEm, Colaborador uploadedBy)
        + getTranscricao() String
        + getDuracao() Duration
        + getOcorreuEm() LocalDateTime
        + getUploadedBy() Colaborador
        + equals(Object o) boolean
    }

    class AnaliseReuniao {
        - String assunto
        - SentimentoReuniao sentimentoReuniao
        - RiscoCancelamento riscoCancelamento
        - SegmentoCliente segmentoCliente
        - List~ProdutoTotvs~ produtosTotvs
        - Reuniao reuniao

        + AnaliseReuniao(Reuniao reuniao)
        + getAssunto() String
        + getSentimentoReuniao() SentimentoReuniao
        + getRiscoCancelamento() RiscoCancelamento
        + getSegmentoCliente() SegmentoCliente
        + getProdutoTotvs() ProdutoTotvs
        + getReuniao() Reuniao
        + equals(Object o) boolean
    }

    class TipoColaborador {
        <<enumeration>>
        VENDEDOR,
        GERENTE_VENDAS
    }

    class SentimentoReuniao {
        <<enumeration>>
        POSITIVO,
        NEUTRO,
        NEGATIVO
    }

    class RiscoCancelamento {
        <<enumeration>>
        MUITO_ALTO,
        ALTO,
        MODERADO,
        BAIXO
    }

    class SegmentoCliente {
        <<enumeration>>
        SAUDE,
        DISTRIBUICAO,
        MANUFATURA,
        SERVICOS,
        CONSTRUCAO_E_PROJETOS,
        EDUCACIONAL,
        AGROINDUSTRIA,
        LOGISTICA,
        SUPERMERCADOS,
        VAREJO,
        NAO_IDENTIFICADO
    }

    class ProdutoTotvs {
        <<enumeration>>
        PROTHEUS,
        RM,
        DATASUL,
        LOGIX,
        RH_CLOCK_IN,
        RH_PERFORMANCE,
        RD_STATION,
        TOTVS_ASSINATURA,
        TOTVS_ANALYTICS,
        FLUIG,
        TOTVS_AUTOMACAO_FISCAL,
        EDUCACAO,
        NAO_IDENTIFICADO
    }

    BaseEntity <|-- Reuniao
    BaseEntity <|-- AnaliseReuniao
    BaseEntity <|-- Colaborador

    Colaborador <|-- Vendedor
    Colaborador <|-- GerenteVendas

    Colaborador ..> TipoColaborador

    Reuniao "1" --> "1" Colaborador : uploadedBy

    AnaliseReuniao "1" --> "1" Reuniao : reuniao

    AnaliseReuniao -- SentimentoReuniao
    AnaliseReuniao -- RiscoCancelamento
    AnaliseReuniao "1" -- "1" SegmentoCliente
    AnaliseReuniao "1" -- "*" ProdutoTotvs